<resources>
    <string name="app_name">RememBirthday</string>
    <string name="anniversaries_title">Birthdays</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>
    <string name="at">At</string>
    <string name="select_contact_title">Select a contact</string>
    <string name="reminder_title">Reminder</string>
    <string name="reminder_notification_title">Notification</string>
    <string name="auto_sms_title">Auto SMS</string>
    <string name="auto_sms_content">SMS Content</string>
    <string name="days_before">Day(s) before</string>

    <!-- Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_modify_contact">Modify contact</string>
    <string name="action_change_anniversary">Change Anniversary</string>
    <string name="action_delete">Delete</string>
    <string name="action_about">About</string>

    <!-- About -->
    <string name="about_version">Version:</string>

    <!-- Dialogs -->
    <string name="dialog_select_birthday_title">Select Birthday</string>
    <string name="dialog_select_birthday_zero_day_left">Happy Birthday!</string>
    <string name="dialog_select_birthday_one_day_left">Birthday in only 1 day!</string>
    <string name="dialog_select_birthday_number_days_left">Birthday in %1$d days.</string>

    <string name="dialog_delete_birthday_title">Delete Birthday</string>
    <string name="dialog_delete_birthday_message">Are you sure you want to delete the anniversary date and related events ?</string>

    <string name="activity_list_contacts_error_add">Error when adding</string>
    <string name="activity_list_contacts_success_add">Successful addition</string>
    <string name="activity_list_contacts_error_update">Error when adding</string>
    <string name="activity_list_contacts_success_update">Successful update</string>
    <string name="activity_list_contacts_error_remove">Error when removing</string>
    <string name="activity_list_contacts_success_remove">Successful removal</string>

    <!-- Permissions -->
    <string name="permission_read_contacts_rationale">Read contact permissions are required for their display</string>
    <string name="permission_read_contacts_denied">The application will not be able to display contacts.</string>
    <string name="permission_write_contacts_rationale">Write contact permissions are required for their save in database</string>
    <string name="permission_write_contacts_denied">The application will not be able to save birthdays in contacts.</string>
    <string name="permission_contacts_neverask">Never Ask</string>

    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_allow">OK</string>
    <string name="button_deny">Deny</string>

    <!-- Notifications -->
    <string name="notifications_anniversary_title">Anniversary</string>
    <string name="notifications_anniversary_today">This is %1$s\'s birthday today.</string>
    <string name="notifications_anniversary_tomorrow">This will be %1$s\'s birthday tomorrow.</string>
    <string name="notifications_anniversary_later">This will be %1$s\'s birthday in 5 days.</string>

    <!-- Preferences -->
    <string name="pref_category_notifications_title">Notifications</string>

    <string name="pref_notifications_service_title">Enable notifications</string>
    <string name="pref_notifications_service_summary">Receive notifications on this device.</string>
    <string name="pref_notifications_service_key" translatable="false">notifications_service_enable</string>
    <string name="pref_notifications_service_default" translatable="false">true</string>

    <string name="pref_notifications_days_title">Default days</string>
    <string name="pref_notifications_days_summary">Ex : "0#2#7" Notification visible on the day, 2 and 7 days before the event.</string>
    <string name="pref_notifications_days_key" translatable="false">notifications_day_enable</string>
    <string name="pref_notifications_days_default" translatable="false">0</string>

    <string name="pref_notifications_time_title">Default time</string>
    <string name="pref_notifications_time_summary">Hour of notifications : [time]</string>
    <string name="pref_notifications_time_key" translatable="false">notifications_time_enable</string>
    <string name="pref_notifications_time_default" translatable="false">10:00</string>

    <string name="pref_category_contacts_sort_title">Contact sort</string>

    <string name="pref_contacts_sort_list_title">Sort</string>
    <string name="pref_contacts_sort_list_summary">Select the sort mode of contacts</string>
    <string name="pref_contacts_sort_list_key" translatable="false">contacts_sort_list</string>
    <string-array name="pref_contacts_sort_list_array">
        <item>By Name</item>
        <item>By Name (desc)</item>
        <item>By Anniversary</item>
        <item>By Anniversary (desc)</item>
        <item>By days left</item>
        <item>By days left (desc)</item>
        <!-- <item>By Favorite</item> -->
        <!-- <item>By Favorite (desc)</item> -->
    </string-array>
    <string name="pref_contacts_sort_list_value_name" translatable="false">by_name</string>
    <string name="pref_contacts_sort_list_value_name_desc" translatable="false">by_name_desc</string>
    <string name="pref_contacts_sort_list_value_anniversary" translatable="false">by_anniversary</string>
    <string name="pref_contacts_sort_list_value_anniversary_desc" translatable="false">by_anniversary_desc</string>
    <string name="pref_contacts_sort_list_value_days_left" translatable="false">by_days_left</string>
    <string name="pref_contacts_sort_list_value_days_left_desc" translatable="false">by_days_left_desc</string>
    <string name="pref_contacts_sort_list_value_default" translatable="false">@string/pref_contacts_sort_list_value_days_left</string>
    <string-array name="pref_contacts_sort_list_values" translatable="false">
        <item>@string/pref_contacts_sort_list_value_name</item>
        <item>@string/pref_contacts_sort_list_value_name_desc</item>
        <item>@string/pref_contacts_sort_list_value_anniversary</item>
        <item>@string/pref_contacts_sort_list_value_anniversary_desc</item>
        <item>@string/pref_contacts_sort_list_value_days_left</item>
        <item>@string/pref_contacts_sort_list_value_days_left_desc</item>
    </string-array>

    <string name="pref_category_theme_title">Theme</string>

    <string name="pref_theme_title">Theme Selection</string>
    <string name="pref_theme_summary">Select the theme of the application</string>
    <string name="pref_theme_key" translatable="false">themes_sort_list</string>
    <string-array name="pref_theme_array">
        <item>Chocolate</item>
    </string-array>
    <string name="pref_theme_values_default">Chocolate</string>
    <string-array name="pref_theme_values">
        <item>@string/pref_theme_values_default</item>
    </string-array>

    <string name="pref_category_advanced_preferences_title">Advanced preferences</string>

    <string name="pref_advanced_preferences_store_anniversary_title">Store Anniversary</string>
    <string name="pref_advanced_preferences_store_anniversary_summary">How to store anniversaries (without year)</string>
    <string name="pref_advanced_preferences_store_anniversary_key" translatable="false">advanced_preferences_store_anniversary</string>

    <string name="pref_advanced_preferences_store_birthday_title">Store Birthday</string>
    <string name="pref_advanced_preferences_store_birthday_summary">How to store birthdays (with year)</string>
    <string name="pref_advanced_preferences_store_birthday_key" translatable="false">advanced_preferences_store_birthday</string>

    <!-- Errors -->
    <string name="error_pref_notifications_days">Unable to save the day values, format the string correctly</string>

</resources>
